[gd_scene load_steps=12 format=2]

[ext_resource path="res://Popup.gd" type="Script" id=1]
[ext_resource path="res://Dialoogid/Level1/inst_base_big.png" type="Texture" id=2]
[ext_resource path="res://ferrum.otf" type="DynamicFontData" id=3]
[ext_resource path="res://PopupText.gd" type="Script" id=4]
[ext_resource path="res://images/Flamefruit.png" type="Texture" id=5]
[ext_resource path="res://Enemy/Monster_1/Walk/Armature_flowmon_walk_duplication2_0.png" type="Texture" id=6]
[ext_resource path="res://images/Level 2_final/level_2_final_värav1_empty.png" type="Texture" id=7]
[ext_resource path="res://images/´logo_1.png" type="Texture" id=8]
[ext_resource path="res://images/Abilities/slice4.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 3 )

[node name="Popup" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="InstructionBase" type="Sprite" parent="."]
visible = false
position = Vector2( 987.677, 875.102 )
texture = ExtResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="InstructionBase"]
position = Vector2( -0.105621, 0 )
color = Color( 1, 1, 1, 0 )
polygon = PoolVector2Array( -437.677, -124.102, -437.677, 55.8983, 442.323, 55.8983, 442.323, -124.102 )

[node name="PopupText" type="RichTextLabel" parent="InstructionBase/Polygon2D"]
margin_left = -348.0
margin_top = -95.0
margin_right = 352.0
margin_bottom = 56.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="InstructionBase/Polygon2D"]
wait_time = 0.05
autostart = true

[node name="FlameFruit" type="Sprite" parent="InstructionBase/Polygon2D"]
visible = false
position = Vector2( -389.851, -44.1017 )
scale = Vector2( 0.742157, 0.742157 )
texture = ExtResource( 5 )

[node name="Monster" type="Sprite" parent="InstructionBase/Polygon2D"]
visible = false
position = Vector2( -389.851, -34.1017 )
scale = Vector2( 0.363357, 0.363357 )
texture = ExtResource( 6 )

[node name="Gate" type="Sprite" parent="InstructionBase/Polygon2D"]
visible = false
position = Vector2( -386.025, -34.1017 )
scale = Vector2( 0.486554, 0.486555 )
texture = ExtResource( 7 )

[node name="Ability" type="Sprite" parent="InstructionBase/Polygon2D"]
visible = false
position = Vector2( -7.57141, -155.102 )
scale = Vector2( 1.48416, 1.48416 )
texture = ExtResource( 8 )

[node name="Doublejump" type="Sprite" parent="InstructionBase/Polygon2D"]
visible = false
position = Vector2( -6.54431, -155.098 )
scale = Vector2( 1.929, 1.929 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="InstructionBase"]
margin_left = -77.6765
margin_top = 108.0
margin_right = 86.3235
margin_bottom = 127.0
custom_fonts/font = SubResource( 2 )
text = "Press 'ENTER' to continue"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="InstructionBase/Polygon2D/Timer" to="InstructionBase/Polygon2D/PopupText" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
